--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,17 @@
 // Import page-specific CSS files here.
 @import "home";
+.category-banner {
+  margin-bottom: 50px;
+  height: 200px;
+  font-weight: bold;
+  font-size: 60px;
+  color: white;
+  text-align: center;
+  background-image: url("felipe-bustillo-4VDRCoNuvE0-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
